--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -158,3 +158,4 @@ $cubic23: cubic-bezier(.23,1,.32,1);
 $cubic40: cubic-bezier(.4,0,.22,1);
 $cubic32: cubic-bezier(.32,.07,.41,1);
 $cubic60: cubic-bezier(.6,0,.48,1);
+$cubic4001: cubic-bezier(.4,0,0,1);
