--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,9 @@
     <script src="/public/js/app.libs.mobile.js"></script>
     <script src="/public/js/app.mobile.js"></script>
     <script src="/public/js/templates.mobile.js"></script>
+    <!-- <script src="/public/templates/commons/modules/auth/forms/signIn.tag" type="riot/tag"></script>
     <script src="/public/templates/commons/modules/auth/forms/signUp.tag" type="riot/tag"></script>
+    <script src="/public/templates/commons/modules/auth/authSocial.tag" type="riot/tag"></script> -->
     <script src="/public/js/init.js"></script>
 
     {% else %}
