--- a/public/css/mobile/home/_home.scss
+++ b/public/css/mobile/home/_home.scss
@@ -27,7 +27,7 @@
                 @extend .content-empty;
                 @extend .w20;
                 @extend .h20;
-                border:4px solid $pink;
+                border:4px solid $blue;
                 border-left:none;
                 border-top:none;
                 transform:rotate(45deg) translateZ(0);
