--- a/assets/css/appResume/premium/sections/_sendmail.scss
+++ b/assets/css/appResume/premium/sections/_sendmail.scss
@@ -20,6 +20,7 @@
         @extend .borderRadius-circle;
         @extend .boxShadow-default;
         @extend .bg-primary;
+        @extend .cursor-pointer;
         will-change:transform, background-color;
 
         html.d-phone & {
