--- a/assets/templates/sections/offers/premiumContent.html
+++ b/assets/templates/sections/offers/premiumContent.html
@@ -167,7 +167,7 @@
         </div>
     </div>
 
-    <div class="offer__premium__slider__logotype"></div>
+    <a href="/premium/" class="offer__premium__slider__logotype"></a>
 
 <script>
 
