--- a/preview/css/_ui.scss
+++ b/preview/css/_ui.scss
@@ -287,6 +287,7 @@
     }
 }
 .scroll {
+    @include accelerate();
     @extend .pos-abs;
     @extend .t50;
     left:80.2%;
@@ -358,6 +359,17 @@ html.d-no-mobile {
                 transform-origin:50% 0%;
                 animation:scroll__wheel 1.4s infinite;
             }
+        }
+        &__lens {
+            @include accelerate();
+            @extend .pos-centered;
+            width:264px;
+            height:264px;
+            @extend .mt--m;
+            @extend .ml--m;
+            @extend .borderRadius-circle;
+            // box-shadow:0 0 0 2000px rgba($snowSilverDark,0.97);
+            box-shadow:0 0 0 2000px rgba($steel,0.97);
         }
     }
 }
@@ -459,5 +471,10 @@ html.d-mobile {
     to {
         transform:translate3d(0, 66%, 0);
         opacity:0;
+    }
+}
+@media screen and (max-height: 620px){
+    body#page .scroll {
+        top:55%;
     }
 }
