--- a/preview/css/style.scss
+++ b/preview/css/style.scss
@@ -15,6 +15,7 @@
 @import 'ui';
 @import 'help';
 @import 'notify';
+@import 'tutorial';
 @import '../../public/css/partials/_menu.scss';
 @import '../../assets/css/ui/basic/button';
 @import '../../assets/css/ui/basic/input';
