--- a/views/premiumView.html
+++ b/views/premiumView.html
@@ -26,6 +26,7 @@
     <script src="/assets/js/premium/templates.editable.js"></script>
     <script src="/assets/js/premium/templates.components.js"></script>
     <script src="/assets/templates/appResume/premium/templates/template1.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/sections/public/sendmail.html" type="riot/tag"></script>
 
     <!--/ JS components /-->
     <script src="/assets/js/premium/app.js"></script>
