--- a/views/workflow.html
+++ b/views/workflow.html
@@ -5,7 +5,7 @@
 {% block styles %}/preview/css/style.css{% endblock %}
 
 {% block body %}
-<body id="page" class="apploading" data-device="phone" data-color="#0084ff">
+<body id="page" class="apploading" data-device="phone" data-color="#0084ff" data-tutorial="true">
 
     <div class="menu__opener">
         <div class="menu__opener__line"></div>
@@ -90,15 +90,144 @@
         <a href="/?signup&plan=premium#oauth" class="addUser__button"></a>
     </div>
 
-    <div class="scroll">
-        <div class="scroll__help" data-text="up">
-            <div class="scroll__text" data-pos="up">Наведите курсор на резюме</div>
-            <div class="scroll__text" data-pos="down">Скрольте вниз</div>
+    <div class="tutorial__screens">
+        <div class="tutorial__screens__items">
+            <div class="tutorial__screen" data-active="true" data-screen="cover">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Ваша фотография</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Первый экран и обложка вашего резюме: фотография, должность и краткая информация о вас.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="commons">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">О себе</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Подробная информация о вас, желаемая зарплата, ваши ключевые навыки, ваше обращение к работодателю и ссылки в социальных медиа.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="works">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Ваше портфолио</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Есть свои или проекты в которых вы учавствовали? Расскажите о них, прикрепив фото и видео материалы.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="skills">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Основные компетенции</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Расскажите подробнее о своих навыках, также укажите силу ваших компетенций, примерно сориентировав работодателя в каком векторе вы двигаетесь.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="education">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Ваше образование</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">У вас есть возможность подробнее рассказать о своем образовании.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="courses">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Курсы</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Посещали курсы? Отлично, укажите их. Работодателю эта информация не будет лишней.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="languages">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Владение языками</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Владеете иностранными языками? Хорошо. Укажите уровень владениями ими.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="jobs">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Опыт работы</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Тут все как обычно, расскажите кем и где вы работали, ваши функциональные обязанности.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="hobby">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Поделитесь увлечениями</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Да, большинству работодателей интересно знать о ваших увлечениях и видеть список ваших хобби в резюме.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="contacts">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Контакты</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Общая контактная информация и предпочитаемый вид для связи с вами.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="businessTrip">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Прочие данные</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Ваше гражданство, график работы, готовность к командировкам и переезду.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="feedback">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Форма связи</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Любой работодатель может написать вам и пригласить на собеседование.</div>
+                </div>
+            </div>
+            <div class="tutorial__screen" data-screen="likes">
+                <div class="tutorial__screen__title">
+                    <div class="tutorial__screen__title__inner">Хотите себе подобное резюме?</div>
+                </div>
+                <div class="tutorial__screen__text">
+                    <div class="tutorial__screen__text__inner">Вы можете открыть премиум аккаунт сейчас и уже начать создавать своё резюме сами или с помощью наших экспертов. <span class="c-yellowBright">Вы только, что посмотрели резюме на смартфонах, также можно посмотреть пример этого резюме на планшетах и десктопах.</span></div>
+                </div>
+                <div class="tutorial__screen__buttons">
+                    <div class="tutorial__sc   reen__button">
+                        <div class="tutorial__screen__button__item">Еще посмотрю</div>
+                    </div>
+                    <div class="tutorial__screen__button">
+                        <div class="tutorial__screen__button__item">Создать аккаунт</div>
+                    </div>
+                </div>
+            </div>
+            <div class="tutorial__screens__num">
+                <div class="tutorial__screens__num__items">01</div>
+            </div>
         </div>
-        <svg class="scroll__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" xml:space="preserve"><path d="M38.2,17c-11.6,0-21,9.4-21,21v24c0,11.6,9.4,21,21,21s21-9.4,21-21V38C59.2,26.4,49.8,17,38.2,17z M54.2,62  c0,8.8-7.2,16-16,16s-16-7.2-16-16V38c0-8.8,7.2-16,16-16s16,7.2,16,16V62z"/><path class="scroll__icon__wheel" d="M38.2,30.4c-1.4,0-2.5,1.1-2.5,2.5v7.3c0,1.4,1.1,2.5,2.5,2.5s2.5-1.1,2.5-2.5v-7.3C40.7,31.6,39.6,30.4,38.2,30.4z"/><path class="scroll__icon__arrow" d="M81.2,61.9l-3.4,3.4V31c0-0.8-0.7-1.5-1.5-1.5s-1.5,0.7-1.5,1.5v34.4l-3.4-3.4c-0.6-0.6-1.5-0.6-2.1,0s-0.6,1.5,0,2.1l6,6  c0.1,0.1,0.3,0.3,0.5,0.3c0,0,0,0,0,0c0.2,0.1,0.4,0.1,0.5,0.1s0.4,0,0.5-0.1c0,0,0,0,0,0c0.2-0.1,0.3-0.2,0.5-0.3l6-6  c0.6-0.6,0.6-1.5,0-2.1S81.8,61.4,81.2,61.9z"/></svg>
+        <div class="scroll">
+            <div class="scroll__help" data-text="up">
+                <div class="scroll__text" data-pos="up">Наведите курсор на резюме</div>
+                <div class="scroll__text" data-pos="down">Скрольте вниз</div>
+            </div>
+            <svg class="scroll__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" xml:space="preserve"><path d="M38.2,17c-11.6,0-21,9.4-21,21v24c0,11.6,9.4,21,21,21s21-9.4,21-21V38C59.2,26.4,49.8,17,38.2,17z M54.2,62  c0,8.8-7.2,16-16,16s-16-7.2-16-16V38c0-8.8,7.2-16,16-16s16,7.2,16,16V62z"/><path class="scroll__icon__wheel" d="M38.2,30.4c-1.4,0-2.5,1.1-2.5,2.5v7.3c0,1.4,1.1,2.5,2.5,2.5s2.5-1.1,2.5-2.5v-7.3C40.7,31.6,39.6,30.4,38.2,30.4z"/><path class="scroll__icon__arrow" d="M81.2,61.9l-3.4,3.4V31c0-0.8-0.7-1.5-1.5-1.5s-1.5,0.7-1.5,1.5v34.4l-3.4-3.4c-0.6-0.6-1.5-0.6-2.1,0s-0.6,1.5,0,2.1l6,6  c0.1,0.1,0.3,0.3,0.5,0.3c0,0,0,0,0,0c0.2,0.1,0.4,0.1,0.5,0.1s0.4,0,0.5-0.1c0,0,0,0,0,0c0.2-0.1,0.3-0.2,0.5-0.3l6-6  c0.6-0.6,0.6-1.5,0-2.1S81.8,61.4,81.2,61.9z"/></svg>
+            <div class="scroll__lens"></div>
+        </div>
     </div>
 
     <div id="device">
+        <div class="tutorial__help__item" data-help="info">
+            Общая информация о вас
+        </div>
+        <div class="tutorial__help__item" data-help="sendmail">
+            Отправить вам приглашение
+        </div>
+        <div class="tutorial__help__item" data-help="salary">
+            Желаемый график роста вашей зарплаты
+        </div>
         <div class="frame-container"></div>
         <div class="loader" data-device="phone">
             <div class="loader-spinner">
