--- a/assets/css/appResume/premium/sections/_info.scss
+++ b/assets/css/appResume/premium/sections/_info.scss
@@ -24,7 +24,11 @@
             @extend .opacity-100;
             @extend .scale-100;
             @extend .pointerEvents-all;
-            transition:transform .3s $cubic345, opacity .3s $cubic345, background-color 0.2s $cubic215;
+            transition:transform .35s $cubic4001, opacity .25s $cubic4001, background-color 0.2s $cubic215;
+
+            html.d-phone & {
+                transition:transform .3s $cubic4001, opacity .25s $cubic4001, background-color 0.2s $cubic215;
+            }
         }
     }
     &-opener {
@@ -40,6 +44,7 @@
         @extend .bg-blackLight;
         @extend .borderRadius-circle;
         @extend .boxShadow-default;
+        @extend .cursor-pointer;
         will-change:transform, background-color;
         transition:transform .3s $cubic345, background-color 0.2s $cubic215;
 
