--- a/assets/css/sections/offers/premium/_ui.scss
+++ b/assets/css/sections/offers/premium/_ui.scss
@@ -1,18 +1,23 @@
 .offer__premium__slider {
     &__logotype {
+        @extend .display-block;
         @extend .pos-abs;
         @extend .t-30;
         @extend .l-45;
         @extend .md-ml--xxs;
         width:51px;
         height:51px;
-        @extend .pointerEvents-none;
         @extend .opacity-0;
         @extend .scale-0;
         @extend .willChange-tp;
         transition:transform 0.5s $cubic32, opacity 0.5s $cubic32;
         @extend .bg-cover;
+        @extend .zIndex-1;
         background-image:url(/assets/images/favicons/120.png);
+
+        #app & {
+            @extend .pointerEvents-none;
+        }
     }
     &__text {
         &__title {
